# universal-system-monitor

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SystemAPIDocs.md  TODO
include/: common.h  cpu.h  libsys.h  memory.h  sys.h
libsys/: common.cpp  cpu.cpp  cpu.h  gpu.cpp  gpu.h  libsys.cpp  libsys.h  memstat.cpp  memstat.h  sys.cpp  sys.h
platform/linux/: common.cpp
platform/linux/monitoring/: cpu.cpp  memory.cpp  system.cpp
src/: main.cpp
